Carme-Frontend/Carme-Django/static/css/style.css
/* ... */
/* input-border */
.form-control {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent!important;
  border: 1px solid var(--carme-input-border);
  border-radius: .25rem;
  -webkit-box-shadow: var(--carme-input-shadow);
  box-shadow: var(--carme-input-shadow);
  outline:none;
}

.form-control:focus {
  border-color: var(--carme-input-border-focus);
  -webkit-box-shadow: var(--carme-input-shadow);
  box-shadow: var(--carme-input-shadow);
  outline: none; 
  outline: 0; 
}

/* disable input shadow in login box */
.form-control-login {
  -webkit-box-shadow: none!important;
  box-shadow: none!important;
}

/* centered box */
.flex-center-carme {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.min-vh-85 {
  min-height: 85vh !important;
}

#login-box {
  border-radius: 12px; 
  padding: 15px;
  max-width: 400px;
  margin: auto;
  -webkit-box-shadow: var(--carme-login-box-shadow);
  box-shadow: var(--carme-login-box-shadow);
  border: 1px solid var(--carme-login-box-border);  
  background-color: var(--carme-login-box-bg)!important;
}

/* QR code */
.qrbox {
  border: 4px solid transparent; 
  --g: var(--carme-black) 90deg, var(--carme-qrcode-border) 0;
  background:
    conic-gradient(from 90deg  at top    4px left  4px,var(--g)) 0    0,
    conic-gradient(from 180deg at top    4px right 4px,var(--g)) 100% 0,
    conic-gradient(from 0deg   at bottom 4px left  4px,var(--g)) 0    100%,
    conic-gradient(from -90deg at bottom 4px right 4px,var(--g)) 100% 100%;
  background-size: 30% 30%;
  background-origin: border-box;
  background-repeat: no-repeat;
  -webkit-box-shadow: var(--carme-qrcode-shadow);
  box-shadow: var(--carme-qrcode-shadow);
  margin: 5px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  
}
.qrcode{
  width:150px; 
  height:150px; 
  background-color:var(--carme-qrcode-bg);
}

/* input-group */
.input-group-text {
  background-repeat: no-repeat, repeat;
  background-position: right 0.6rem center;
  background-size: 16px 12px;
  border-radius: .25rem;
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--carme-input-group-border);
  color: var(--carme-input-group-text);
  background-color: var(--carme-input-group-bg)!important;
  box-shadow: var(--carme-input-group-shadow)!important;
  outline:none;
}

/*--------------------------------------------------*/
/*                     Footer                       */
/*--------------------------------------------------*/

/* top */
.footer-top{
  color: var(--carme-footer-top-text);
  background-color: var(--carme-footer-top-bg);
  border-top: 1px solid var(--carme-footer-top-border);
  -webkit-box-shadow: var(--carme-footer-top-shadow);
  box-shadow: var(--carme-footer-top-shadow);
}
.footer-top a {
  color: var(--carme-footer-top-text);
  text-decoration: none;
}
.footer-top a:hover {
  color: var(--carme-footer-top-text-hover);
  text-decoration: underline;
}

/* bottom */
.footer-bottom{
  color: var(--carme-footer-bottom-text);
  background-color: var(--carme-footer-bottom-bg);
  border-top: 1px solid var(--carme-footer-bottom-border);
  -webkit-box-shadow: var(--carme-footer-bottom-shadow);
  box-shadow: var(--carme-footer-bottom-shadow);
}
.footer-bottom a {
  color: var(--carme-footer-bottom-text);
  text-decoration: none;
}
.footer-bottom a:hover {
  color: var(--carme-footer-bottom-text-hover);
  text-decoration: underline;
} 

/*--------------------------------------------------*/
/*                     Navbar                       */
/*--------------------------------------------------*/

/* nav */
nav {
  background-color: var(--carme-navbar-bg)!important;
  border-bottom: none;
}

/* navbar-link */
nav a.nav-link,
nav a.nav-link:focus,
nav a.nav-link:active{
  color: var(--carme-navbar-text)!important;
}
nav a.nav-link:hover{
  color: var(--carme-navbar-text-hover)!important;
} 

/* navbar-toggle */
.navbar-toggler-icon {
  display: block;
  width: 20px;
  height: 40px;
  margin: -5px;
}
.navbar-toggler-frame {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.3125rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
}
.navbar-toggler-frame:hover {
  border: 1px solid var(--carme-toggler-border-hover)!important;
}
.navbar-toggler-frame:focus, 
.navbar-toggler-frame:active {
  outline: none;
  box-shadow: none;
}

/* navbar-right-icons */
.fa-border {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  background-color: var(--carme-navbar-icons-bg);
  border: none;
  height: 30px;
  width: 30px;
}

/* dropdown-arrow-icon */
.dropdown-toggle.dropdown-right::after {
  content: none;
}
.dropdown-toggle.dropdown-left::after {
  border: none!important;
  font: normal normal normal 14px/1 FontAwesome;
  content: "\f107"!important; 
  vertical-align: 0; 
}

/* dropdown-menu */
.dropdown-menu{
  position: absolute;
  top: 112% !important;
  z-index: 1000;
  display: none;
  min-width: 10rem;
  padding: 1rem 0;
  margin: 0;
  font-size: 0.8rem;
  text-align: left;
  list-style: none;
  background-clip: padding-box;
  border-radius: .25rem;
  color: var(--carme-dropdown-menu-text)!important;
  background-color: var(--carme-dropdown-menu-bg)!important;
  border: 1px solid var(--carme-dropdown-menu-border)!important;
  -webkit-box-shadow: var(--carme-dropdown-menu-shadow)!important;
  box-shadow: var(--carme-dropdown-menu-shadow)!important;
}
/* ... */

